data/raw_logs/lexical/lex_12.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_12.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_12.c:1:22: error: invalid suffix 'lmnop' on integer constant
    1 | int main() { int x = 123lmnop; }
      |                      ^~~~~~~~
